# tg_zuzublik

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: test.csv  test.xlsx  test_broken.csv  test_clear.csv
src/: config.py  database.py  errors.py  handlers.py  keyboards.py  main.py  schemas.py  services.py
