[project]
name = "zuzubliki"
version = "0.1.0"
description = ""
authors = [
    {name = "Vyacheslav",email = "slava20031112@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.20.0,<4.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "aiohttp (>=3.11.16,<4.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "parsel (>=1.10.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
